// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно считать сумму без услуг и размещений 1`] = `
Object {
  "calls": Object {
    "CARS_NEW": 0,
    "CARS_USED": 0,
    "MOTO": 0,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "callsTotal": 0,
  "placements": Object {
    "CARS_NEW": 0,
    "CARS_USED": 0,
    "MOTO": 70,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "placementsTotal": 70,
  "services": Object {
    "CARS_NEW": 0,
    "CARS_USED": 0,
    "MOTO": 0,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "servicesTotal": 0,
  "summaryByTariff": Object {
    "CARS_NEW": 0,
    "CARS_USED": 0,
    "MOTO": 70,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "total": 70,
  "totalWithDiscount": 70,
}
`;

exports[`должен корректно считать сумму для существующих размещений и услуг (начальную сумму) 1`] = `
Object {
  "calls": Object {
    "CARS_NEW": 0,
    "CARS_USED": 0,
    "MOTO": 0,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "callsTotal": 0,
  "placements": Object {
    "CARS_NEW": 0,
    "CARS_USED": 190,
    "MOTO": 70,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "placementsTotal": 260,
  "services": Object {
    "CARS_NEW": 1250,
    "CARS_USED": 1500,
    "MOTO": 0,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "servicesTotal": 2750,
  "summaryByTariff": Object {
    "CARS_NEW": 1250,
    "CARS_USED": 1690,
    "MOTO": 70,
    "TRUCKS_COMMERCIAL": 0,
    "TRUCKS_LCV_NEW": 0,
    "TRUCKS_LCV_USED": 0,
    "TRUCKS_SPECIAL": 0,
  },
  "total": 3010,
  "totalWithDiscount": 3010,
}
`;
